--- a/index.html
+++ b/index.html
@@ -172,8 +172,8 @@
               href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9"
               target="_blank"
               rel="noopener noreferrer nofollow"
-            ></a
-            >м. Київ, пр-т Лесі Українки, 26
+              >м. Київ, пр-т Лесі Українки, 26</a
+            >
           </li>
           <li>
             <a class="footer-email" href="mailto:info@devstudio.com"
